[package]
name = "equivolume-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
dotenv = "0.15.0"
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
